# bountiful

./: .gitignore  LICENSE  README.md  pyproject.toml
bountiful/: __init__.py  client.py  crypto.py  db.py  inbox.py  manifest.py  models.py
prototype/: site_a.py  site_b.py  test_protocol.py
